--- a/index.html
+++ b/index.html
@@ -13,7 +13,54 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>scroll project</h1>
+    <!-- header -->
+     <header id="home">
+        <!-- navbar -->
+         <nav id="nav">
+            <div class="nav-center">
+                <!-- nav header -->
+                 <div class="nav-header">
+                     <img src="./logo.svg" alt="logo" class="logo">
+                     <button class="nav-toggle">
+                        <i class="fas fa-bars"></i>
+                     </button>
+                 </div>
+                 <!-- links -->
+                  <div class="links-container">
+                    <ul class="links">
+                        <li>
+                            <a href="#home" class="scroll-link">home</a>
+                        </li>
+                        <li>
+                            <a href="#about" class="scroll-link">about</a>
+                        </li>
+                        <li>
+                            <a href="#services" class="scroll-link">services</a>
+                        </li>
+                        <li>
+                            <a href="#tours" class="scroll-link">tours</a>
+                        </li>
+                    </ul>
+                  </div>
+            </div>
+         </nav>
+         <!-- banner -->
+          <div class="banner">
+            <div class="container">
+                <h1>scroll project</h1>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora delectus quaerat optio atque itaque odit odio maiores dignissimos nostrum iure.
+                </p>
+                <a href="#tours" class="scroll-link btn btn-white">
+                    explore tours
+                </a>
+            </div>
+          </div>
+     </header>
+     <!-- about -->
+      <section id="about">
+        
+      </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
