--- a/index.html
+++ b/index.html
@@ -58,9 +58,37 @@
           </div>
      </header>
      <!-- about -->
-      <section id="about">
-        
+      <section id="about" class="section">
+        <div class="title">
+          <h2>about <span>us</span></h2>
+        </div>
       </section>
+     <!-- services -->
+      <section id="services" class="section">
+        <div class="title">
+          <h2>our <span>services</span></h2>
+        </div>
+      </section>
+     <!-- tours -->
+      <section id="tours" class="section">
+        <div class="title">
+          <h2>featured <span>tours</span></h2>
+        </div>
+      </section>
+      <!-- footer -->
+       <footer class="section">
+        <p>
+          copyright &copy; backwards trave tours company 
+          <span id="date">
+            
+          </span>
+          .all rights reserved
+        </p>
+       </footer>
+       <!-- back to top button -->
+        <a href="#home" class="scroll-link top-link">
+          <i class="fas fa-arrow-up"s></i>
+        </a>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
